# rag_documents_chatbot

./: .gitignore  README.md  pyproject.toml
notebooks/: prueba-llm-2.ipynb  prueba-llm.ipynb
src/: app.py  rag.py
