[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Alex <alexsaez1990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "^0.3.14"
langchain-community = "^0.3.14"
langchain-huggingface = "^0.1.2"
streamlit = "^1.41.1"
torch = { url = "https://download.pytorch.org/whl/cu124/torch-2.5.1%2Bcu124-cp312-cp312-win_amd64.whl" }
faiss-cpu = "^1.9.0.post1"
pypdf = "^5.1.0"
streamlit-chat = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
