[tool.poetry]
name = "rag-chatbot"
version = "0.1.0"
description = ""
authors = ["Alex <alexsaez1990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.14"
langchain-community = "^0.3.14"
transformers = "^4.48.0"
huggingface = "^0.0.1"
sentence-transformers = "^3.3.1"
streamlit = "^1.41.1"
streamlit-chat = "^0.1.1"
langchain-huggingface = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
